--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,10 @@
         {% endif %}
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
+        
+        {% if site.logo %}
+          <img src="/assets/img/logo-patreon.png" alt="PatreonLogo" />
+        {% endif %}
 
         {% if site.github.is_user_page %}
         <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
