--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,9 @@
         <p>{{ site.description | default: site.github.project_tagline }}</p>
         
         {% if site.logo %}
-          <img src="/eds-windows-mods/assets/img/logo-patreon-become.png" alt="PatreonLogo" />
+      		<a target="_blank" href="https://www.patreon.com/edswindowsmods">
+      		  <img src="/eds-windows-mods/assets/img/logo-patreon-become.png" alt="PatreonLogo">
+      		</a>
         {% endif %}
 
         {% if site.github.is_user_page %}
