--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -2,15 +2,15 @@
 @import "rouge-github";
 
 body {
-  background-color: #fff;
+  background-color: #181a1b;
   padding:50px;
   font: 14px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color:#727272;
+  color:#a0988b;
   font-weight:400;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  color:#222;
+  color:#d3cfc9;
   margin:0 0 20px;
 }
 
@@ -27,11 +27,11 @@ h1 {
 }
 
 h2 {
-  color:#393939;
+  color:#c4bfb7;
 }
 
 h3, h4, h5, h6 {
-  color:#494949;
+  color:#bab4ab;
 }
 
 a {
@@ -170,7 +170,7 @@ ul.downloads {
 }
 
 strong {
-  color:#222;
+  color:#d3cfc9;
   font-weight:700;
 }
 
