--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,7 +50,7 @@
         {% if site.github.is_project_page %}
         <p>By <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         </br>
-        <p>Special thanks to my testers: Dimitar Cenov, Karlis Zakis, Nikolai Valkov, Nikola Ivanov, Toms Jugans.</p>
+        <p>Special thanks to testers: Dimitar Cenov, Karlis Zakis, Nikolai Valkov, Nikola Ivanov, Toms Jugans.</p>
         {% endif %}
       </footer>
     </div>
