--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,7 +48,7 @@
       </section>
       <footer>
         {% if site.github.is_project_page %}
-        <p>Special thanks to testers: Dimitar Cenov, Karlis Zakis, Nikolai Valkov, Nikola Ivanov, Toms Jugans.</p>
+        <p><b>Special thanks to testers:</b> Dimitar Cenov, Karlis Zakis, Nikolai Valkov, Nikola Ivanov, Toms Jugans.</p>
         <p>By <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
       </footer>
